# mMBa

./: .gitignore  CMakeLists.txt  README.md  YamlSpecification.md  build.sh  conanfile.txt  demo.sh  examplespaper.h  image_greyval  install.sh  thesis_helpers.h  voxelvolume.h
P41/: definitions.h  morphologystatistics.h  voxelio.h
P41/evaluation_stuff/: anisotropy_10_vs_3.gp  anisotropy_comparison.gp  boundary_effects.gp  circular_plots.gp  fit_large_pores_rotation.py  fit_medium_pores.py  large_pores_hist_w_fit.gp  log_distribution_large_pores.gp  log_distributions_comparison.gp  medium_pores_hist_w_plot.gp  poreRadiusDistribution.gp  small_pores_hist_w_fit.gp  wallthickness_model.txt  (+1 more)
additional_evaluation/: output_berea  output_carbon  output_homberg  output_homberg_half_res  output_ketton  times_berea  times_carbon  times_ketton
gnuplot_scripts/: 10_draw.gp  11_draw.gp  12_draw.gp  1_draw.gp  3_draw.gp  8_draw.gp  gp_hists.gp  gp_hists2.gp
original_code/: all_readmes.txt  print_path_readme.sh
original_code/P41/: CMakeLists.txt  README.txt  histogram.h  logarithmic_bins.h  main.cpp  morphologystatistics.cpp  voxelvolume.h
original_code/P41/evaluation_stuff/: av_connectivity_vs_eff_pore_radius.gp  circle.txt  circles.txt  digital_pore_projections.gp  eff_pore_radius_distribution.gp  fig43.gp  fig46.gp  fit_large_pores_axis_ratio.py  fit_large_pores_size.py  fit_small_pores.py  large_pore_projections.gp  log_distribution_artificial.gp  medium_pores_hist_w_fit.gp  ratios_of_axis.gp  small_pore_projections.gp  wallthickness_compare.gp  wta_model_after_erosion.txt  wta_model_erosion_dilation.txt
src/: DistanceField.cpp  DistanceField.h  PoreMorphology.cpp  PoreMorphology.h  RunFromYaml.cpp  RunFromYaml.h  VoxelVolume.cpp  VoxelVolume.h  distancefield.cpp  distancefield.h  examplespaper.h  importhomberg.h  main.cpp  poremorphology.h  thesis_helpers.h  voxelvolume.h
unsorted/: README.txt  circle_coordinates_radius  circles  donut_snippet  gp_subsampling.gp  gridpoints
(+40 files in other folders)
